--- a/data/view/templates/operateModal.html
+++ b/data/view/templates/operateModal.html
@@ -37,7 +37,8 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body" style="max-height:600px;overflow: auto;{{ 'min-height:{0}px'.format(minHeight) if minHeight >0 else '' }}">
+                <div class="modal-body"
+                     style="max-height:600px;overflow: auto;{{ 'min-height:{0}px'.format(minHeight) if minHeight >0 else '' }}">
                     {{ caller() }}
                 </div>
                 <div class="modal-footer justify-content-between">
@@ -93,7 +94,8 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body" style="max-height:600px;overflow: auto;{{ 'min-height:{0}px'.format(minHeight) if minHeight >0 else '' }}">
+                <div class="modal-body"
+                     style="max-height:600px;overflow: auto;{{ 'min-height:{0}px'.format(minHeight) if minHeight >0 else '' }}">
                     {{ caller() }}
                 </div>
                 <div class="modal-footer justify-content-between">
@@ -108,5 +110,34 @@
     <button type="button" class="btn btn-block btn-default btn-sm" id="linksModalBtn"
             data-toggle="modal" data-target="#linksModal" style="display:none"><i class="fas fa-plus"></i>
         关联
+    </button>
+{% endmacro %}
+
+{% macro patternModal(width=0,minHeight=0) %}
+    <div class="modal fade" id="patternModal">
+        <div class="modal-dialog">
+            <div class="modal-content" style="{{ 'width:{0}px'.format(width) if width >0 else '' }}">
+                <div class="modal-header">
+                    <h4 class="modal-title">选择主题</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body"
+                     style="max-height:600px;overflow: auto;{{ 'min-height:{0}px'.format(minHeight) if minHeight >0 else '' }}">
+                    {{ caller() }}
+                </div>
+                <div class="modal-footer justify-content-between">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="patternOptClose">取消</button>
+                    <button type="button" class="btn btn-primary" id="patternOpt">保存</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <button type="button" class="btn btn-block btn-default btn-sm" id="patternModalBtn"
+            data-toggle="modal" data-target="#patternModal" style="display:none"><i class="fas fa-plus"></i>
+        主题
     </button>
 {% endmacro %}
