--- a/data/view/web/app.html
+++ b/data/view/web/app.html
@@ -39,11 +39,15 @@
         <hr>
 
         <label>设备配置软件 ： </label>
-        <a href="/api/website/dev.zip">download - 下载</a>
+        <a href="/api/website/dev.rar">download - 下载</a>
         <hr>
 
-        <label>客户端软件： </label>
-        <a href="/api/website/heroage.zip">download - 下载</a>
+        <label>多媒体软件： </label>
+        <a href="/api/website/content.rar">download - 下载</a>
+        <hr>
+
+        <label>开关机： </label>
+        <a href="/api/website/on_off.rar">download - 下载</a>
         <hr>
 
         <label>浏览器下载 ： </label>
